--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,16 @@
+
+
 plugins {
     id 'java'
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.9'
 }
 
 group 'org.example'
 version '1.0-SNAPSHOT'
+
+
+
 
 repositories {
     mavenCentral()
@@ -12,8 +19,19 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    implementation 'org.jxmapviewer:jxmapviewer2:2.6'
+    compile 'com.google.firebase:firebase-admin:7.3.0'
+
 }
 
 test {
     useJUnitPlatform()
 }
+
+javafx {
+    version = "11.0.1"
+    modules = [ 'javafx.controls', 'javafx.fxml' ,'javafx.swing']
+}
+mainClassName = 'gui.App'
+
+
