--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,18 @@
 /.idea/shelf/Uncommitted_changes_before_Update_at_10_9_2021_9_00_AM_[Default_Changelist]/sha1-checksums.bin
 /.idea/shelf/Uncommitted_changes_before_Update_at_10_9_2021_9_00_AM_[Default_Changelist]/shelved.patch
 /.idea/shelf/Uncommitted_changes_before_Update_at_10_9_2021_9_00_AM_[Default_Changelist]/taskHistory.bin
+/.idea/shelf/Uncommitted_changes_before_Update_at_10_9_2021_9_00_AM_[Default_Changelist]/buildOutputCleanup.lock
+/.idea/shelf/Uncommitted_changes_before_Update_at_10_9_2021_9_00_AM_[Default_Changelist]/checksums.lock
+/.idea/shelf/Uncommitted_changes_before_Update_at_10_9_2021_9_00_AM_[Default_Changelist]/classAnalysis.bin
+/.idea/shelf/Uncommitted_changes_before_Update_at_10_9_2021_9_00_AM_[Default_Changelist]/executionHistory.bin
+/.idea/shelf/Uncommitted_changes_before_Update_at_10_9_2021_9_00_AM_[Default_Changelist]/executionHistory.lock
+/.idea/shelf/Uncommitted_changes_before_Update_at_10_9_2021_9_00_AM_[Default_Changelist]/fileHashes.bin
+/.idea/shelf/Uncommitted_changes_before_Update_at_10_9_2021_9_00_AM_[Default_Changelist]/fileHashes.lock
+/.idea/shelf/Uncommitted_changes_before_Update_at_10_9_2021_9_00_AM_[Default_Changelist]/finalProj-1.0-SNAPSHOT.jar
+/.idea/shelf/Uncommitted_changes_before_Update_at_10_9_2021_9_00_AM_[Default_Changelist]/finalProj-1.0-SNAPSHOT.tar
+/.idea/shelf/Uncommitted_changes_before_Update_at_10_9_2021_9_00_AM_[Default_Changelist]/finalProj-1.0-SNAPSHOT.zip
+/.idea/shelf/Uncommitted_changes_before_Update_at_10_9_2021_9_00_AM_[Default_Changelist]/javaCompile.lock
+/.idea/shelf/Uncommitted_changes_before_Update_at_10_9_2021_9_00_AM_[Default_Changelist]/resourceHashesCache.bin
+/.idea/shelf/Uncommitted_changes_before_Update_at_10_9_2021_9_00_AM_[Default_Changelist]/sha1-checksums.bin
+/.idea/shelf/Uncommitted_changes_before_Update_at_10_9_2021_9_00_AM_[Default_Changelist]/shelved.patch
+/.idea/shelf/Uncommitted_changes_before_Update_at_10_9_2021_9_00_AM_[Default_Changelist]/taskHistory.bin
