added testFx and examles for testing gui

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,10 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     implementation 'org.jxmapviewer:jxmapviewer2:2.6'
     implementation 'com.google.firebase:firebase-admin:7.3.0'
+    testCompile "org.testfx:testfx-core:4.0.16-alpha"
+    testCompile 'org.junit.jupiter:junit-jupiter-api:5.5.1'
+    testCompile "org.testfx:testfx-junit5:4.0.16-alpha"
+    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.13.2'
 
 }
 
@@ -41,7 +45,7 @@ jar {
         //inputs.files( configurations.runtimeClasspath )
 
         attributes(
-                'Main-Class': 'gui.App'
+                'Main-Class': 'gui.Launcher'
         )
     }
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
